log/build_2024-12-11_19-04-04/so_arm100/stdout_stderr.log
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


-- Found ament_cmake: 1.3.11 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found hardware_interface: 2.44.0 (/opt/ros/humble/share/hardware_interface/cmake)
-- Found rosidl_generator_c: 3.1.6 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.6 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.6 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.7 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found TinyXML2 via Config file: TinyXML2_DIR-NOTFOUND
-- Found TinyXML2 via Config file: TinyXML2_DIR-NOTFOUND
-- Found TinyXML2 via Config file: TinyXML2_DIR-NOTFOUND
-- Found TinyXML2 via Config file: TinyXML2_DIR-NOTFOUND
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ubuntu22/ros2_so_arm100/build/so_arm100
[ 33%] Building CXX object CMakeFiles/so_arm100.dir/src/feetech_hardware_interface.cpp.o
[ 66%] Building CXX object CMakeFiles/so_arm100.dir/src/feetech.cpp.o
/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:25:7: error: redefinition of ‘class so_arm100::FeetechHardwareInterface’
   25 | class FeetechHardwareInterface : public hardware_interface::SystemInterface
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:1:
/home/ubuntu22/ros2_so_arm100/so_arm100/include/so_arm100/feetech_hardware_interface.hpp:17:7: note: previous definition of ‘class so_arm100::FeetechHardwareInterface’
   17 | class FeetechHardwareInterface : public hardware_interface::SystemInterface
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/class_loader/class_loader/class_loader.hpp:37,
                 from /opt/ros/humble/include/pluginlib/pluginlib/class_list_macros.hpp:40,
                 from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:250:
/usr/include/c++/11/cstddef:52:8: error: expected unqualified-id before string constant
   52 | extern "C++"
      |        ^~~~~
In file included from /opt/ros/humble/include/class_loader/class_loader/class_loader.hpp:56,
                 from /opt/ros/humble/include/pluginlib/pluginlib/class_list_macros.hpp:40,
                 from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:250:
/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:251:1: error: expected ‘}’ at end of input
  251 | PLUGINLIB_EXPORT_CLASS(so_arm100::FeetechHardwareInterface, hardware_interface::SystemInterface)
      | ^~~~~~~~~~~~~~~~~~~~~~
/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:16:1: note: to match this ‘{’
   16 | {
      | ^
gmake[2]: *** [CMakeFiles/so_arm100.dir/build.make:79：CMakeFiles/so_arm100.dir/src/feetech_hardware_interface.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:151：CMakeFiles/so_arm100.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
